--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
-VITE_API_URL=http://175.41.151.78:1000
 
-VITE_AI_API_URL=http://175.41.151.78:7100
+# # Deployed Server
+VITE_API_URL=http://175.41.151.78:1000
+# for MERN backend and Python Pdf Formatter
+
+VITE_AI_API_URL=http://47.130.55.18:7100
+# # For evaluation
+
+
+
+# # Local  Server
+# VITE_API_URL=http://175.41.151.78:1000
+# # for MERN backend and Python Pdf Formatter
+
+# VITE_AI_API_URL=http://47.130.55.18:7100
+# For evaluation
