--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@lexical/selection": "^0.22.0",
     "@lexical/utils": "^0.22.0",
     "@material-tailwind/react": "^2.1.10",
+    "@react-pdf/renderer": "^4.1.6",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.62.15",
     "axios": "^1.7.9",
