Landing Page fixed

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@lexical/code": "^0.22.0",
     "@lexical/link": "^0.22.0",
     "@lexical/list": "^0.22.0",
