create and save new course v2.6

--- a/.env
+++ b/.env
@@ -14,3 +14,8 @@ VITE_AI_API_URL=http://47.130.55.18:7100
 
 # VITE_AI_API_URL=http://47.130.55.18:7100
 # For evaluation
+
+## testing server 
+
+##backend
+VITE_LOCAL_URL= http://localhost:1000
