--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ VITE_AI_API_URL=http://47.130.55.18:7100
 
 # VITE_AI_API_URL=http://47.130.55.18:7100
 # For evaluation
+
+## testing server 
+
+
+
+##FOR local testing --backend
+# VITE_API_URL= http://localhost:1000
