--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # # Deployed Server
-# VITE_API_URL=http://175.41.151.78:1000
+ VITE_API_URL=http://175.41.151.78:1000
 # for MERN backend and Python Pdf Formatter
 
 VITE_AI_API_URL=http://47.130.55.18:7100
@@ -20,4 +20,4 @@ VITE_AI_API_URL=http://47.130.55.18:7100
 
 
 ##FOR local testing --backend
-VITE_API_URL= http://localhost:1000
+# VITE_API_URL= http://localhost:1000
