--- a/.env
+++ b/.env
@@ -20,4 +20,7 @@ VITE_AI_API_URL=http://47.130.55.18:7100
 
 
 ##FOR local testing --backend
- VITE_API_URL= http://localhost:1000
+#  VITE_API_URL= http://localhost:1000
+
+# BACKEND-ABHISHEKMISHRA
+VITE_API_URL = http://192.168.1.24:7000
