--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@
 # VITE_API_URL=http://175.41.151.78:1000
 # # for MERN backend and Python Pdf Formatter
 
-VITE_AI_API_URL=http://47.130.55.18:7000
-# For evaluation
+ VITE_AI_API_URL=http://47.130.55.18:7000
+# Updated and deployed on cloud date 12th feb
 
 ## testing server 
 
@@ -23,8 +23,9 @@ VITE_AI_API_URL=http://47.130.55.18:7000
 #  VITE_API_URL= http://localhost:1000
 
 # BACKEND-ABHISHEKMISHRA
-# VITE_API_URL=http://192.168.1.16:7000
-VITE_API_URL=http://47.130.55.18:7000
+ VITE_API_URL=http://192.168.1.16:7000
 
-# Cloud bacvkewnd url
-# VITE_API_URL=https://organic-carnival-jvpv746vvxjcqj4q-7000.app.github.dev
+
+# Updated and deployed on cloud date 12th feb
+# VITE_API_URL=http://47.130.55.18:7000
+# -----------------------------------------------
