--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-pdf/renderer": "^4.1.6",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.62.15",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "jodit-react": "^4.1.2",
