--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-query": "^3.39.3",
     "react-toastify": "^11.0.2",
