--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.15.0",
     "jodit-react": "^4.1.2",
     "lexical": "^0.22.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
