--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@
 # VITE_API_URL=http://47.130.55.18:7000
 # -----------------------------------------------
 
-# BACKEND-ABHISHEKMISHRA-local
+# BACKEND-bartika-local
  VITE_API_URL=http://192.168.1.54:7300
 
 
