--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # VITE_API_URL=http://175.41.151.78:1000
 # # for MERN backend and Python Pdf Formatter
 
- VITE_AI_API_URL=http://47.130.55.18:7000
+ #VITE_AI_API_URL=http://47.130.55.18:7000
 # Updated and deployed on cloud date 12th feb
 
 ## testing server 
@@ -19,6 +19,4 @@
 # -----------------------------------------------
 
 # BACKEND-bartika-local
-# VITE_API_URL=http://192.168.1.58:7300
-
-
+#VITE_API_URL=http://192.168.1.58:7300
