--- a/.env
+++ b/.env
@@ -15,8 +15,13 @@
 
 
 # Updated and deployed on cloud date 31st march
- VITE_API_URL=http://47.130.55.18:7000
+#  VITE_API_URL=http://47.130.55.18:7000
 # -----------------------------------------------
 
-# BACKEND-bartika-local
-# VITE_API_URL=http://192.168.1.58:7300
+# BACKEND--local
+ VITE_API_URL=http://192.168.1.30:9100
+
+
+# BACKEND--deployed
+ VITE_API_URL=https://assessmentor-backend.onrender.com
+ 
