--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@
 # -----------------------------------------------
 
 # BACKEND--local
- VITE_API_URL=http://192.168.1.30:9100
+#  VITE_API_URL=http://192.168.1.30:9100
 
 
 # BACKEND--deployed
